create video-card component

--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -17,7 +17,6 @@
                     <div class="row profile-details-row">
                               <img *ngIf="videographer.profilePic" [src]="videographer.profilePic"
                                 alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
-
                         <div class="col-sm-6 col-lg-8">
                             <div class="container d-flex h-100">
                                     <div class="row name-location-row justify-content-center align-self-center">
@@ -30,7 +29,6 @@
                                             </mat-list-item>                                    
                                         </div>
                                 </div>
-                          
                         </div>
                     </div>
                     <div class="row">
@@ -63,28 +61,7 @@
 
             <ng-container *ngIf="videos">
                 <ng-container *ngFor="let vd of videos">
-                    <mat-card>
-                        <mat-card-title>
-                            {{vd.title}}
-                        </mat-card-title>
-                        <mat-card-content>
-                            <div class="embed-responsive embed-responsive-16by9">
-                                <video controls="true" class="embed-responsive-item">
-                                    <source src="{{vd.url}}" type="video/mp4" />
-                                </video>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-10 offset-md-1">
-                                    {{vd.description}}
-                                </div>
-                            </div>
-                        </mat-card-content>
-                        <mat-card-footer *ngIf="videographer && videographer.id === auth.activeUserId()">
-                            <a mat-raised-button class="mr-auto" routerLink="{{'videos/' + vd.id + '/edit'}}">Edit
-                                Video</a>
-                            <a mat-raised-button class="mr-auto" (click)="removeVideo(vd, $event)">Remove Video</a>
-                        </mat-card-footer>
-                    </mat-card>
+                    <video-card [video]="vd" [showAvatar]="false" ></video-card>
                 </ng-container>
             </ng-container>
         </div>
