change to 'Welcome'

--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-sm-offset-2 col-sm-8 col-xs-12">
         <mat-card>
-            <h4>Howdy! This site is used to showcase up and coming videographers.</h4>
+            <h4>Welcome! This site is used to showcase up and coming videographers.</h4>
         </mat-card>
     </div>
 </div>
