--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -13,8 +13,8 @@
         <div class="col-sm-12 col-md-10">
             <mat-card>
                 <mat-card-content>
-                    <div class="cover-photo" *ngIf="videographer.profilePic" style="background-image: url(https://inspirationfeed.com/wp-content/uploads/2017/03/Man-Picking-up-gopro-camera-on-tripod-1.jpg)"></div>
-                    <div class="row profile-details-row">
+                        <div class="cover-photo" [style.background-image]="backgroundUrl"></div>
+                        <div class="row profile-details-row">
                               <img *ngIf="videographer.profilePic" [src]="videographer.profilePic"
                                 alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
                         <div class="col-sm-6 col-lg-8">
