--- a/src/app/components/video/video.component.scss
+++ b/src/app/components/video/video.component.scss
@@ -21,6 +21,29 @@
     }
 }
 
+.outer.showing-thumbnail {
+    position: relative;
+    &:before {
+      display: block;
+      content: "";
+      width: 100%;
+      padding-top: (199 / 354) * 100%;
+    }
+    > .inner {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+  }
+
+.video-thumbnail {
+    width: 100%;
+    height: 100%;
+    transform: rotate(180deg);
+}
+
 @media only screen and (min-width: 575px) {
     .mat-card-content {
         padding: 0 15px;
