--- a/src/app/pages/edit-video/edit-video.component.html
+++ b/src/app/pages/edit-video/edit-video.component.html
@@ -3,8 +3,10 @@
         <mat-card>
             <mat-card-content>
                 <mat-card-title>Making edits to video <i>{{video.title}}</i>:</mat-card-title>
-
-                <form [formGroup]="videoForm" (ngSubmit)="onSubmit()">
+                <div class="row justify-content-center" *ngIf="loading">
+                    <mat-spinner></mat-spinner>
+                </div>
+                <form *ngIf="!loading" [formGroup]="videoForm" (ngSubmit)="onSubmit()">
                     <div class="row">
                         <div class="col-sm-6">
                             <mat-form-field>
@@ -24,7 +26,8 @@
                             </mat-form-field>
                         </div>
                         <div class="col-sm-6">
-                            <button mat-raised-button color="primary" (click)="selectThumbnailPhoto($event)">Upload Thumbnail
+                            <button mat-raised-button color="primary" (click)="selectThumbnailPhoto($event)">Upload
+                                Thumbnail
                                 Photo</button>
                             <ng-container *ngIf="thumbnailPhoto">
                                 <span>{{thumbnailPhoto.name}}</span>
@@ -36,7 +39,8 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <mat-checkbox [checked]="orderPreference" (click)="toggleOrderPreference()">No preference on
+                            <mat-checkbox [checked]="orderPreference" (click)="toggleOrderPreference()">No
+                                preference on
                                 placement of video in list of videos.</mat-checkbox>
                             <mat-form-field>
                                 <input matInput placeholder="Video List Order" type="number" formControlName="order">
