--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <ng-container *ngIf="video.videographerId === auth.activeUserId()">
-            <a mat-raised-button class="mr-auto" routerLink="{{'videos/' + video.id + '/edit'}}">Edit
+            <a mat-raised-button class="mr-auto" routerLink="{{'../your-portfolio/videos/' + video.id + '/edit'}}">Edit
                 Video</a>
             <a mat-raised-button class="mr-auto" (click)="removeVideo(video, $event)">Remove Video</a>
         </ng-container>
