--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -13,29 +13,32 @@
         <div class="col-sm-12 col-md-10">
             <mat-card>
                 <mat-card-content>
-                        <div class="cover-photo" [style.background-image]="backgroundUrl"></div>
-                        <div class="row profile-details-row">
-                              <img *ngIf="videographer.profilePic" [src]="videographer.profilePic"
-                                alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
-                        <div class="col-sm-6 col-lg-8">
-                            <div class="container d-flex h-100">
-                                    <div class="row name-location-row justify-content-center align-self-center">
-                                        <mat-list-item>
-                                                <h3 matLine> {{ videographer.firstName || null }} {{videographer.lastName || null}}
-                                                </h3>
-                                                <p matLine>
-                                                    <span> {{videographer.location || null}} </span>
-                                                </p>
-                                            </mat-list-item>                                    
-                                        </div>
+                    <div class="cover-photo" [style.background-image]="backgroundUrl"></div>
+                    <div class="row profile-details-row">
+                        <img *ngIf="videographer.profilePic" [src]="videographer.profilePic"
+                            alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"
+                            class="avatar" />
+                        <div class="col-sm-6 col-lg-8 mt-3">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                    <mat-list-item>
+                                        <h3 matLine> {{ videographer.firstName || null }}
+                                            {{videographer.lastName || null}}
+                                        </h3>
+                                        <p matLine>
+                                            <span> {{videographer.location || null}} </span>
+                                        </p>
+                                    </mat-list-item>
+                                </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        {{videographer.bio || null}}
+                                    </div>
                                 </div>
                         </div>
                     </div>
-                    <div class="row">
-                            <div class="offset-sm-2 col-sm-8">
-                                    {{videographer.bio || null}}
-                            </div>
-                    </div>
+
                 </mat-card-content>
                 <mat-card-footer [hidden]="true">
                     <div class="container">
@@ -47,7 +50,8 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-12 col-sm-6 col-md-4">
-                                    <button type="button" class="btn btn-primary" (click)="subscribeToPortfolio()">Subscribe to Portfolio</button>
+                                    <button type="button" class="btn btn-primary"
+                                        (click)="subscribeToPortfolio()">Subscribe to Portfolio</button>
                                 </div>
                             </div>
                         </form>
