--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -32,7 +32,7 @@
                                 </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-12">
+                                    <div class="col-sm-12 bio">
                                         {{videographer.bio || null}}
                                     </div>
                                 </div>
