--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <mat-form-field>
-                    <textarea matInput placeholder="Biography" type="text" formControlName="bio"></textarea>
+                    <textarea matInput placeholder="Bio" type="text" formControlName="bio"></textarea>
                 </mat-form-field>
                 <div class="row">
                     <div class="col-sm-12 justify-content-end">
