--- a/src/app/pages/add-video/add-video.component.html
+++ b/src/app/pages/add-video/add-video.component.html
@@ -1,48 +1,1 @@
-<div class="row justify-content-center" *ngIf="videoForm">
-    <div class="col-sm-10">
-        <mat-card>
-            <mat-card-content *ngIf="!uploading">
-                <mat-card-title>Add a Video to your Portfolio:</mat-card-title>
-
-                <form [formGroup]="videoForm" (ngSubmit)="onSubmit()">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Video Title" type="text" formControlName="title">
-                            </mat-form-field>
-                        </div>
-                        <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Description" type="text" formControlName="description">
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <button mat-raised-button color="primary" (click)="selectVideo($event)">Select Video</button>
-                            <ng-container *ngIf="file">
-                                <span>{{file.name}}</span>
-                                <button mat-icon-button color="primary" (click)="removeVideo($event)">
-                                    <mat-icon>close</mat-icon>
-                                </button>
-                            </ng-container>
-                        </div>
-                    </div>
-                    
-                    <div class="row">
-                        <div class="col-sm-12 justify-content-end">
-                            <button mat-raised-button [routerLink]="['../']">Cancel</button>
-                            <button mat-raised-button type="submit">Add Video</button>
-                        </div>
-                    </div>
-                </form>
-            </mat-card-content>
-            <mat-card-content *ngIf="uploading">
-                    <mat-card-title>Uploading {{file.name}}...</mat-card-title>
-                    <mat-spinner></mat-spinner>
-            </mat-card-content>
-        </mat-card>
-    </div>
-</div>
-
-<input #fileDialogue #fileUpload type="file" (change)="onVideoSelect($event)" class="hide">
+<add-edit-video [newVideo]="true"></add-edit-video>
