--- a/src/app/pages/edit-video/edit-video.component.html
+++ b/src/app/pages/edit-video/edit-video.component.html
@@ -1,61 +1,1 @@
-<div class="row justify-content-center" *ngIf="videoForm">
-    <div class="col-sm-10">
-        <mat-card>
-            <mat-card-content>
-                <mat-card-title>Making edits to video <i>{{video.title}}</i>:</mat-card-title>
-                <div class="row justify-content-center" *ngIf="loading">
-                    <mat-spinner></mat-spinner>
-                </div>
-                <form *ngIf="!loading" [formGroup]="videoForm" (ngSubmit)="onSubmit()">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Video Title" type="text" formControlName="title">
-                            </mat-form-field>
-                        </div>
-                        <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Description" type="text" formControlName="description">
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Genre" type="text" formControlName="genre">
-                            </mat-form-field>
-                        </div>
-                        <div class="col-sm-6">
-                            <button mat-raised-button color="primary" (click)="selectThumbnailPhoto($event)">Upload
-                                Thumbnail
-                                Photo</button>
-                            <ng-container *ngIf="thumbnailPhoto">
-                                <span>{{thumbnailPhoto.name}}</span>
-                                <button mat-icon-button color="primary" (click)="removeThumbnailPhoto()">
-                                    <mat-icon>close</mat-icon>
-                                </button>
-                            </ng-container>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <mat-checkbox [checked]="orderPreference" (click)="toggleOrderPreference()">No
-                                preference on
-                                placement of video in list of videos.</mat-checkbox>
-                            <mat-form-field>
-                                <input matInput placeholder="Video List Order" type="number" formControlName="order">
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 justify-content-end">
-                            <button mat-raised-button [routerLink]="['../']">Cancel</button>
-                            <button mat-raised-button type="submit">Save Edits</button>
-                        </div>
-                    </div>
-                </form>
-            </mat-card-content>
-        </mat-card>
-    </div>
-</div>
-<input #fileUpload type="file" (change)="onPictureSelect($event)" class="hide">
+<add-edit-video [video]="video" [newVideo]="false"></add-edit-video>
