--- a/src/app/components/video/video.component.scss
+++ b/src/app/components/video/video.component.scss
@@ -49,3 +49,18 @@
         padding: 0 15px;
     }
   }
+
+  .img-overlay-wrap {
+    position: relative;
+    display: inline-block;
+    transition: transform 150ms ease-in-out;
+  }
+  
+  .img-overlay-wrap .play-svg {
+    position: absolute;
+    top: 4%;
+    left: 88%;
+    width: 10%;
+    opacity: 0.6;
+  }
+  
