--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -13,7 +13,7 @@
     <mat-card-content>
         <div *ngIf="!showingVideo" class="outer showing-thumbnail">
             <div class="inner img-overlay-wrap" title="Click to play video">
-                    <img class="play-svg" src="../../../assets/play-circle-regular.svg">
+                        <svg class="play-svg" clas xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5v9zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                     <img (click)="showVideo()" class="video-thumbnail pointer" [src]="video.thumbnailUrl">
             </div>
         </div>
