--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -13,16 +13,7 @@
                     <div class="row justify-content-center" *ngIf="loading">
                         <mat-spinner></mat-spinner>
                     </div>
-                    <mat-list *ngIf="!loading">
-                        <mat-list-item *ngFor="let vg of videographers; let i = index" class="pointer"
-                            routerLink="{{getLink(vg)}}">
-                            <img matListAvatar src="{{ vg.profilePic}}" alt="{{vg.firstName + ' ' + vg.lastName}}">
-                            <h2 matLine class="bold"> {{vg.firstName + ' ' + vg.lastName}} </h2>
-                            <p matLine>
-                                <span *ngIf="vg.location">{{vg.location}}</span>
-                            </p>
-                        </mat-list-item>
-                    </mat-list>
+                    <videographer-carousel [videographers]="videographers"></videographer-carousel>
                 </mat-card-content>
             </mat-card>
 
